--- a/templates/main/property-create.html
+++ b/templates/main/property-create.html
@@ -201,6 +201,7 @@
 
                   <div class="col-md-12 custom-pad-20">
                     <div class="dropzone dz mb-20">
+                      <div class="mb-2"> Upload images of the property and it's documents</div>
                       <div class="fallback">{{ form.images }}</div>
                       <div id="image-preview"></div>
                       <div><small>Choose multiple files. Supported formats are .jpg and .png, 5MB max</small></div>
