added our associates

--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -92,6 +92,16 @@
                                 At Bomach Group of Company, we believe in harnessing the power of modern technology to enhance our services. We stay at the forefront of industry advancements, integrating innovative solutions that drive efficiency and improve outcomes for our clients.</div>
 
                                 <div class="">Attention to detail is ingrained in our work ethic. We meticulously plan and execute each project, ensuring that every aspect is flawlessly implemented. Throughout the project phase, we maintain open communication channels with our clients, fostering a collaborative environment that guarantees client satisfaction.</div>
+
+                                <div class="mt-2">
+                                    <h2>Our Associates</h2>
+                                    <ul>
+                                        <li>Bomach Shelters</li>
+                                        <li>Alpha Logistics</li>
+                                        <li>Heptagon Hills</li>
+                                        <li>Yhuga</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
