worked on property (Estate)

--- a/templates/main/include/footer.html
+++ b/templates/main/include/footer.html
@@ -14,7 +14,8 @@
                         </div>
                         <div class="col-xl-8">
                             <div class="footer__subscribe wow fadeInUp" data-wow-delay="0.6s">
-                                <div class="footer__subscribe-form footer__subscribe-form-2 footer__subscribe-form-3 p-relative">
+                                <div
+                                    class="footer__subscribe-form footer__subscribe-form-2 footer__subscribe-form-3 p-relative">
                                     {% csrf_token %}
                                     {{ email_form.email }}
                                     <button class="theme-btn">subscribe now</button>
@@ -30,7 +31,8 @@
                 <div class="col-xl-4 col-lg-6 col-md-6">
                     <div class="footer__widget footer-1 pr-100 mb-30 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="footer__widget-logo mb-35">
-                            <a href="/"><img src="{% static 'assets/img/logo/bomach-logo-hd.jpeg' %}" alt="footer-logo"></a>
+                            <a href="/"><img src="{% static 'assets/img/logo/bomach-logo-hd.jpeg' %}"
+                                    alt="footer-logo"></a>
                         </div>
 
                     </div>
@@ -56,31 +58,33 @@
                             <ul>
                                 <li class="d-flex align-items-start">
                                     <div class="footer__info-icon mr-15">
-                                       <i class="fal fa-map-marker-alt"></i>
+                                        <i class="fal fa-map-marker-alt"></i>
                                     </div>
                                     <div class="footer__info-text">
-                                       <h5>Suite 9 Swiss Guard Plaza,450 Ogui Road Enugu, <br>
-                                       Enugu state, Nigeria.</h5>                                  
+                                        <h5>Suite 9 Swiss Guard Plaza,450 Ogui Road Enugu, <br>
+                                            Enugu state, Nigeria.</h5>
                                     </div>
-                                 </li>
-                                 <li class="d-flex align-items-start">
+                                </li>
+                                <li class="d-flex align-items-start">
                                     <div class="footer__info-icon mr-15">
-                                       <i class="far fa-envelope-open"></i>
+                                        <i class="far fa-envelope-open"></i>
                                     </div>
                                     <div class="footer__info-text">
-                                       <h5>Email:</h5>
-                                       <a href="mailto:contact@bomachgroup.com"><span>contact@bomachgroup.com</span></a>
+                                        <h5>Email:</h5>
+                                        <a
+                                            href="mailto:bomachgroupmanagement@gmail.com"><span>bomachgroupmanagement@gmail.com</span></a>
                                     </div>
-                                 </li>
-                                 <li class="d-flex align-items-start">
+                                </li>
+                                <li class="d-flex align-items-start">
                                     <div class="footer__info-icon mr-20">
-                                       <i class="fal fa-phone"></i>
+                                        <i class="fal fa-phone"></i>
                                     </div>
                                     <div class="footer__info-text">
-                                       <h5>Phone: </h5>
-                                       <a href="tel:08036656173">080 3665 6173,</a> <a href="tel:08036656173">090 1555 5159</a>
+                                        <h5>Phone: </h5>
+                                        <a href="tel:08036656173">080 3665 6173,</a> <a href="tel:08036656173">090 1555
+                                            5159</a>
                                     </div>
-                                 </li>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -88,7 +92,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="footer-coptright footer-copyright-bg pt-40 pb-40">
         <div class="container">
             <div class="row align-items-center">
@@ -100,10 +104,11 @@
                 <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6">
                     <div class="footer__cmenu text-end">
                         <ul class="footer__social">
-                            <li><a href="https://web.facebook.com/bomachgroup"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="https://web.facebook.com/bomachgroup"><i class="fab fa-facebook-f"></i></a>
+                            </li>
                             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>                        
+                            <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
                         </ul>
                     </div>
                 </div>
