added links for property

--- a/templates/main/include/header_others.html
+++ b/templates/main/include/header_others.html
@@ -166,6 +166,7 @@
                                             <li><a href="/team">Team</a></li>
                                         </ul>
                                     </li>
+                                    <li><a href="/property">Properties</a></li>
 
                                     <li class="menu-item-has-children"><a href="#">Services</a>
                                         <ul class="sub-menu">
